antiqueStyle.css
header{
	text-align: center;
}
#headerBttns{
	display: flex;
	flex-direction: row;
	justify-content: space-around;
}
#headerBttns a, #headerBttns a:visited{
	width:30%;
	border:1px solid black;
	border-bottom: none;
	border-top:none;
	text-decoration: none;
	padding-top:10px;
	padding-bottom: 10px;
	margin-top:-10px;
	margin-bottom:-8px;
	font-size: 20px;
	color:black;
}
#headerBttns a:hover{
	background-color: rgba(0, 0, 0, 0.1);
	color:black;
}
#gallery{
	width: 85%;
	margin-right: auto;
	margin-left: auto;
	padding:0px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-around;
}
#gallery img{
	width: auto;
	height: 500px;
	margin:5px;
	padding:0px;
	overflow: hidden;
	border:;
}
#gallery img:hover{
	cursor: pointer;
}

/*Antique detail pages*/
.imageBox img{
	width: auto;
	height: 500px;
	margin:5px;
	padding:0px;
	overflow: hidden;
}
.spec{
	width:550px;
	border:1px solid black;
	border-radius: 5px;
	height:auto;
	margin-right:50px;
}
.spec h4{
	text-align:center;
}
.spec li{
	margin-bottom: 10px
}
.antiqueDetails{
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	width:100%;
	height:auto;
	margin-right: auto;
	margin-left: auto;
}
.antiqueHeader{
	display: flex;
	flex-direction: row-reverse;
	justify-content: flex-end;
}
.antiqueHeader button{
	border-radius: 3px;
	margin-left:10px;
	margin-top:auto;
	margin-bottom: auto;
	height:30px;
}
.antiqueHeader h1{
	margin-left:auto;
	margin-right: auto;
}
.imageBox{
	margin-left:50px;
}


/*Main Page*/
.aboutLink{
	width:300px;
	border:1px solid black;
	border-radius: 5px;
	display:flex;
	justify-content: space-between;
	flex-direction: column;
	align-content: center;
	text-align: center;
	padding:5px;
	margin:5px;
}
.aboutLink button{
	width:200px;
	align-self: center;
}
.whatIsAntique, .whyDigitize{
	width:50%;
	min-width: 300px;
	border:1px solid black;
	border-radius: 5px;
	padding:5px;
	margin:5px;
}
.whatIsAntique p::first-letter, .whyDigitize p::first-letter{
	font-size: 200%;
}


/*About Page*/
#about{
	width: 100%;
}
#about h2{
	text-align: center;
}

